fixed spacing around the minimap and added the git tree as a separate include

--- a/project_03_interactive/final/css/style.css
+++ b/project_03_interactive/final/css/style.css
@@ -23,6 +23,7 @@ h2 {
 .explain-box {
   color: #9d9687;
   font-family: "Playfair Display";
+  /* font-family: "Neuton"; */
   font-size: small;
 }
 
@@ -36,7 +37,7 @@ h2 {
   grid-template-rows: auto;
   /* grid-template-columns: repeat(auto-fill, minmax(360px, 1fr)); */
   /* grid-auto-rows: 400px; */
-  grid-gap: 15px;
+  grid-gap: 10px;
   /* align-items: center; */
   /* justify-items: right;  */
 }
@@ -91,6 +92,8 @@ h2 {
 
 .const-text {
   font-size: 3px;
+  text-align: center;
+  padding-left: 3em;
   
 }
 
